--- a/desafio tabuada/style.css
+++ b/desafio tabuada/style.css
@@ -22,6 +22,12 @@ div#subtitulo {
     text-align: center;
     font-size: 1em;
 }
+#tabela {
+    height: 160px;
+}
+textarea {
+    height: 100%;
+}
 footer {
     font-style: italic;
     text-align: center;
