--- a/desafio calculadora/style.css
+++ b/desafio calculadora/style.css
@@ -20,14 +20,40 @@ main {
 }
 
 main #visor {
-    height: 75px;
+    height: 90px;
     margin: 10px;
+    padding: 10px;
+    font-size: 2.7em;
     border-radius: 10px;
     border: 2px solid rgb(192, 192, 192);
     background-color: rgb(212, 212, 212);
     box-shadow: 3px 3px 3px rgba(97, 97, 97, 0.315);
 }
+main #visor #calculo {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+    height: 30%;
+    background-color: rgb(40, 48, 48);
+}
+main #visor #c1, #sinal, #c3 {
+    width: fit-content;
+    min-width: 7%;
+    height: 100%;
+    text-align: center;
+    margin: 0px 2px;
+    font-size: 0.55em;
+    background-color: antiquewhite;
+}
 
+main #visor #res {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    width: 100%;
+    height: 70%;
+    background-color: rgb(134, 129, 139);
+}
 main #botoes {
     width: 100%;
 }
