--- a/desafio calculadora/style.css
+++ b/desafio calculadora/style.css
@@ -40,7 +40,6 @@ main #visor #calculo {
     flex-direction: row-reverse;
     width: 100%;
     height: 30%;
-    background-color: rgb(40, 48, 48);
 }
 main #visor #c1, #sinal, #c3 {
     width: fit-content;
@@ -49,16 +48,16 @@ main #visor #c1, #sinal, #c3 {
     text-align: center;
     margin: 0px 2px;
     font-size: 0.5em;
-    background-color: antiquewhite;
+    
 }
 
-main #visor #res {
+main #visor #resultado {
     display: flex;
     justify-content: end;
     align-items: center;
     width: 100%;
     height: 70%;
-    background-color: rgb(134, 129, 139);
+    
 }
 main #botoes {
     width: 100%;
