--- a/desafio calculadora/style.css
+++ b/desafio calculadora/style.css
@@ -5,7 +5,7 @@
     padding: 0;
 }
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: monospace;
     background: black url(math-bg.jpg) fixed no-repeat center center;
     background-size: cover;
 }
@@ -41,7 +41,7 @@ main #visor #calculo {
     width: 100%;
     height: 30%;
 }
-main #visor #c1, #sinal, #c3 {
+main #visor #valor2, #sinal, #valor1 {
     width: fit-content;
     min-width: 7%;
     height: 100%;
@@ -57,7 +57,8 @@ main #visor #resultado {
     align-items: center;
     width: 100%;
     height: 70%;
-    
+    font-size: 1.5em;
+    font-weight: bold;
 }
 main #botoes {
     width: 100%;
