--- a/desafio calculadora/style.css
+++ b/desafio calculadora/style.css
@@ -19,6 +19,7 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    max-width: 600px;
     width: 80%;
     padding: 8px;
     background-color: #27272d;
@@ -41,7 +42,6 @@ main #visor #calculo {
     flex-direction: row-reverse;
     width: 100%;
 }
-
 main #visor #valor2, #sinal, #valor1 {
     width: fit-content;
     min-width: 7%;
