--- a/desafio analisador de numeros/style.css
+++ b/desafio analisador de numeros/style.css
@@ -28,6 +28,9 @@ div#subtitulo {
 textarea {
     height: 100%;
 }
+select#numadd {
+    width: 150px;
+}
 footer {
     font-style: italic;
     text-align: center;
